@@ -1064,23 +1064,40 @@ static int init_account_group(void)
 				Child, account_recv_ask_checkbox = MakeCheck(_("Ask"),FALSE),
 				End,
 			End,
+
 		Child, HGroup,
-			Child, MakeLabel(_("Active")),
-			Child, HGroup, Child, account_recv_active_check = MakeCheck(_("Active"), FALSE), Child, HSpace(0), End,
-			Child, MakeLabel(_("_Delete mails")),
-			Child, HGroup, Child, account_recv_delete_check = MakeCheck(_("_Delete mails"), FALSE), Child, HSpace(0), End,
-			Child, MakeLabel(_("Avoid duplicates")),
-			Child, HGroup, Child, account_recv_avoid_check = MakeCheck(_("Avoid duplicates"), FALSE), Child, HSpace(0), End,
-			Child, MakeLabel(_("APOP")),
-			Child, HGroup, Child, account_recv_apop_cycle = MakeCycle(_("APOP"),apop_labels), Child, HSpace(0),End,
-			Child, MakeLabel(_("Secure")),
-			Child, HGroup,
-				Child, account_recv_ssl_check = MakeCheck(_("Secure"), FALSE),
-				Child, HSpace(0),
-				Child, MakeLabel(_("with STLS")),
-				Child, account_recv_stls_check = MakeCheck(_("with STLS"), FALSE),
+			Child, VGroup,
+				Child, ColGroup(2),
+					Child, MakeLabel(_("Active")),
+					Child, HGroup,
+						Child, account_recv_active_check = MakeCheck(_("Active"), FALSE), 
+						Child, HSpace(0),
+						End,
+
+					Child, MakeLabel(_("APOP")),
+					Child, account_recv_apop_cycle = MakeCycle(_("APOP"),apop_labels), 
+					End,
 				End,
 			Child, HVSpace,
+			Child, VGroup,
+				Child, ColGroup(2),
+					Child, MakeLabel(_("Avoid duplicates")),
+					Child, account_recv_avoid_check = MakeCheck(_("Avoid duplicates"), FALSE),
+
+					Child, MakeLabel(_("_Delete mails")),
+					Child, account_recv_delete_check = MakeCheck(_("_Delete mails"), FALSE),
+					End,
+				End,
+			Child, HVSpace,
+			Child, VGroup,
+				Child, ColGroup(2),
+					Child, MakeLabel(_("Secure")),
+					Child, account_recv_ssl_check = MakeCheck(_("Secure"), FALSE),
+
+					Child, MakeLabel(_("with STLS")),
+					Child, account_recv_stls_check = MakeCheck(_("with STLS"), FALSE),
+					End,
+				End,
 			End,
 
 		Child, HorizLineTextObject(_("Send")),
@@ -1131,8 +1148,6 @@ static int init_account_group(void)
 				Child, HVSpace,
 				Child, MakeLabel(_("Use IP as domain")),
 				Child, account_send_ip_check = MakeCheck(_("Use IP as domain"), FALSE),
-				Child, HVSpace,
-
 				End,
 			End,
 		End;
